feat: ExecutionResultContext 개발(알림 정보를 담을 객체)